--- a/package.json
+++ b/package.json
@@ -40,5 +40,16 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://112.124.64.150:5000"
+  "proxy": "http://112.124.64.150:5000",
+  "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1"
+  }
 }
